--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMM2hCg25rp9wdBZwrGzXhl",
+      "authorship_tag": "ABX9TyPvXCs8nTkUjJsildhMCmnE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "NE6D9WvpGL1t"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -88,16 +88,16 @@
       "source": [
         "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
         "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')\n",
-        "# search = SerpAPIWrapper(serpapi_api_key=\"Your_SearAPI_Key\")\n",
+        "search = SerpAPIWrapper(serpapi_api_key=\"\")\n",
         "db = SQLDatabase.from_uri(\"sqlite:///chinook.db\")\n",
         "db_chain = SQLDatabaseChain.from_llm(llm, db, verbose=True)\n",
         "wikipedia = WikipediaQueryRun(api_wrapper=WikipediaAPIWrapper())\n",
         "tools = [\n",
-        "    #Tool(\n",
-        "    #    name = \"Search\",\n",
-        "    #    func=search.run,\n",
-        "    #    description=\"useful for when you need to answer questions about real-time events. You should ask targeted questions\"\n",
-        "    #),\n",
+        "    Tool(\n",
+        "        name = \"Search\",\n",
+        "        func=search.run,\n",
+        "        description=\"useful for when you need to answer questions about real-time events. You should ask targeted questions\"\n",
+        "    ),\n",
         "    Tool(\n",
         "        name=\"Wikipedia\",\n",
         "        func=wikipedia.run,\n",
@@ -133,14 +133,17 @@
       "metadata": {
         "id": "HcePPP4M5HPE"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# prompt = \"How many people live in the US?\"\n",
-        "prompt = \"What is the best selling song in the music store?\"\n",
+        "# prompt = \"What is the best selling song in the music store?\"\n",
+        "# prompt = \"What is the cheapest album in the music store? Tell me the price.\"\n",
+        "# prompt = \"What is the best selling song starting with the letter 'F' in the music store? Tell me title and artist.\"\n",
+        "prompt = \"How is the weather now in Cologne? Please use Celsius as unit for temperature.\"\n",
         "response = agent_executor.invoke({\"input\": prompt})[\"output\"]"
       ],
       "metadata": {
@@ -148,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EA-3_QJj6tWN",
-        "outputId": "1dc37e6d-5a3b-441c-a8ae-409adc7b65ac"
+        "outputId": "3df8701d-22a6-4c0f-a124-510eb5061f3a"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,23 +163,10 @@
             "\n",
             "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
             "\u001b[32;1m\u001b[1;3m\n",
-            "Invoking: `MusicSales` with `best selling song`\n",
+            "Invoking: `Search` with `current weather in Cologne in Celsius`\n",
             "\n",
             "\n",
-            "\u001b[0m\n",
-            "\n",
-            "\u001b[1m> Entering new SQLDatabaseChain chain...\u001b[0m\n",
-            "best selling song\n",
-            "SQLQuery:\u001b[32;1m\u001b[1;3mSELECT \"tracks\".\"Name\", SUM(\"invoice_items\".\"Quantity\") as \"TotalSold\"\n",
-            "FROM \"tracks\"\n",
-            "JOIN \"invoice_items\" ON \"tracks\".\"TrackId\" = \"invoice_items\".\"TrackId\"\n",
-            "GROUP BY \"tracks\".\"Name\"\n",
-            "ORDER BY \"TotalSold\" DESC\n",
-            "LIMIT 1\u001b[0m\n",
-            "SQLResult: \u001b[33;1m\u001b[1;3m[('The Trooper', 5)]\u001b[0m\n",
-            "Answer:\u001b[32;1m\u001b[1;3mThe best selling song is 'The Trooper'.\u001b[0m\n",
-            "\u001b[1m> Finished chain.\u001b[0m\n",
-            "\u001b[33;1m\u001b[1;3mThe best selling song is 'The Trooper'.\u001b[0m\u001b[32;1m\u001b[1;3mThe best selling song in the music store is 'The Trooper'.\u001b[0m\n",
+            "\u001b[0m\u001b[36;1m\u001b[1;3m{'type': 'weather_result', 'temperature': '13', 'unit': 'Celsius', 'precipitation': '2%', 'humidity': '77%', 'wind': '11 km/h', 'location': 'Cologne, Germany', 'date': 'Tuesday 10:00 PM', 'weather': 'Clear'}\u001b[0m\u001b[32;1m\u001b[1;3mThe current weather in Cologne, Germany is clear with a temperature of 13 degrees Celsius. The humidity is at 77% and there is a 2% chance of precipitation. The wind speed is 11 km/h.\u001b[0m\n",
             "\n",
             "\u001b[1m> Finished chain.\u001b[0m\n"
           ]
@@ -193,38 +183,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Zsnvgf6BRaV",
-        "outputId": "0096500f-8222-419c-b75f-716c4cc6c27d"
+        "outputId": "6fb717af-20b9-44d7-b860-533fc06188c3"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The best selling song in the music store is 'The Trooper'.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(db)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "04hsXxBWB_AA",
-        "outputId": "eff3477e-7184-4b48-ce05-2b6d4ba71e18"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<langchain.utilities.sql_database.SQLDatabase object at 0x7f8470a021d0>\n"
+            "The current weather in Cologne, Germany is clear with a temperature of 13 degrees Celsius. The humidity is at 77% and there is a 2% chance of precipitation. The wind speed is 11 km/h.\n"
           ]
         }
       ]
