--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvXCs8nTkUjJsildhMCmnE",
+      "authorship_tag": "ABX9TyP7gfBs3nI9/o5yEngvv9KB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "NE6D9WvpGL1t"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "id": "EA-3_QJj6tWN",
         "outputId": "3df8701d-22a6-4c0f-a124-510eb5061f3a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,13 +185,187 @@
         "id": "9Zsnvgf6BRaV",
         "outputId": "6fb717af-20b9-44d7-b860-533fc06188c3"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The current weather in Cologne, Germany is clear with a temperature of 13 degrees Celsius. The humidity is at 77% and there is a 2% chance of precipitation. The wind speed is 11 km/h.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Gradio Chatbot"
+      ],
+      "metadata": {
+        "id": "-fL3b1FXIx9I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://www.gradio.app/docs/chatbot"
+      ],
+      "metadata": {
+        "id": "jnFqvgYjIskP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  !pip install gradio -q\n",
+        "  %load_ext gradio"
+      ],
+      "metadata": {
+        "id": "SWqv1gumJSWq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def run_gradio_app():\n",
+        "  import gradio as gr\n",
+        "  import random\n",
+        "  import time\n",
+        "\n",
+        "  # Theming\n",
+        "  theme = gr.themes.Default(\n",
+        "      primary_hue=\"slate\" # , radius_size=gr.themes.Size(radius_sm=\"3px\", radius_xs=\"2px\", radius_xxs=\"1px\")\n",
+        "  )\n",
+        "  # Styling: Change max width\n",
+        "  css = \"\"\"\n",
+        "    .gradio-container {max-width: 800px!important}\n",
+        "    .vspacer1 {margin-top: 50px}\n",
+        "  \"\"\"\n",
+        "\n",
+        "  with gr.Blocks(theme=theme, css=css) as demo:\n",
+        "\n",
+        "      gr.Markdown(\"# MyApp\", elem_classes=\"vspacer1\")\n",
+        "      gr.Markdown(\"### Optimizing your work with LLMs.\")\n",
+        "\n",
+        "\n",
+        "      #\n",
+        "      # 1. Tab 1\n",
+        "      #\n",
+        "      with gr.Tab(\"Chat\"):\n",
+        "        # https://www.gradio.app/docs/chatbot\n",
+        "\n",
+        "        chatbot = gr.Chatbot()\n",
+        "        msg = gr.Textbox()\n",
+        "        clear = gr.ClearButton([msg, chatbot])\n",
+        "\n",
+        "\n",
+        "        def respond(message, chat_history):\n",
+        "            bot_message = random.choice([\"How are you?\", \"I love you\", \"I'm very hungry\"])\n",
+        "            chat_history.append((message, bot_message))\n",
+        "            #time.sleep(2)\n",
+        "            return \"\", chat_history\n",
+        "\n",
+        "        def respond1(message, chat_history):\n",
+        "            chat_history.append((message))\n",
+        "            return \"\", chat_history\n",
+        "\n",
+        "        def respond2(chat_history):\n",
+        "            bot_message = random.choice([\"How are you?\", \"I love you\", \"I'm very hungry\"])\n",
+        "            chat_history.append((bot_message))\n",
+        "            #time.sleep(2)\n",
+        "            return chat_history\n",
+        "\n",
+        "        #msg.submit(respond, [msg, chatbot], [msg, chatbot])\n",
+        "\n",
+        "\n",
+        "        msg.submit(respond1, [msg, chatbot], [msg, chatbot], queue=False).then(\n",
+        "          respond2, chatbot, chatbot\n",
+        "        )\n",
+        "\n",
+        "\n",
+        "      #\n",
+        "      # 2. Tab 2\n",
+        "      #\n",
+        "      with gr.Tab(\"Input Text \"):\n",
+        "        gr.Markdown(\"Please enter text\")\n",
+        "\n",
+        "        # Input text via UI\n",
+        "        gr.Markdown(\"### Input your text:\")\n",
+        "        text_input = gr.Textbox(label=\"Enter text\", placeholder=\"Your text here...\", lines=10)\n",
+        "        text_output = gr.Textbox(label=\"Result\")\n",
+        "\n",
+        "\n",
+        "      #\n",
+        "      # 3. Tab 3\n",
+        "      #\n",
+        "      with gr.Tab(\"Step 2\"):\n",
+        "        gr.Markdown(\"Please select the optimization:\")\n",
+        "        radio = gr.Radio(\n",
+        "          [\"by headline\", \"by paragraph\", \"by §§§\"], label=\"Text split method\"\n",
+        "        )\n",
+        "        name = gr.Textbox(label=\"Name\", placeholder=\"Enter text...\")\n",
+        "        output = gr.Textbox(label=\"Output Box\")\n",
+        "\n",
+        "\n",
+        "  demo.launch(quiet=True, share=False, debug=True)\n",
+        "\n",
+        "run_gradio_app()"
+      ],
+      "metadata": {
+        "id": "RW6M3o8PJGYq",
+        "outputId": "7c0af78e-baa8-4901-bfa6-e9aa2b7f76f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 563
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "(async (port, path, width, height, cache, element) => {\n",
+              "                        if (!google.colab.kernel.accessAllowed && !cache) {\n",
+              "                            return;\n",
+              "                        }\n",
+              "                        element.appendChild(document.createTextNode(''));\n",
+              "                        const url = await google.colab.kernel.proxyPort(port, {cache});\n",
+              "\n",
+              "                        const external_link = document.createElement('div');\n",
+              "                        external_link.innerHTML = `\n",
+              "                            <div style=\"font-family: monospace; margin-bottom: 0.5rem\">\n",
+              "                                Running on <a href=${new URL(path, url).toString()} target=\"_blank\">\n",
+              "                                    https://localhost:${port}${path}\n",
+              "                                </a>\n",
+              "                            </div>\n",
+              "                        `;\n",
+              "                        element.appendChild(external_link);\n",
+              "\n",
+              "                        const iframe = document.createElement('iframe');\n",
+              "                        iframe.src = new URL(path, url).toString();\n",
+              "                        iframe.height = height;\n",
+              "                        iframe.allow = \"autoplay; camera; microphone; clipboard-read; clipboard-write;\"\n",
+              "                        iframe.width = width;\n",
+              "                        iframe.style.border = 0;\n",
+              "                        element.appendChild(iframe);\n",
+              "                    })(7860, \"/\", \"100%\", 500, false, window.element)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n"
           ]
         }
       ]
