--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7gfBs3nI9/o5yEngvv9KB",
+      "authorship_tag": "ABX9TyOalRUEBMQ67gfmxfHqg8XQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,17 +208,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# https://www.gradio.app/docs/chatbot"
-      ],
-      "metadata": {
-        "id": "jnFqvgYjIskP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "  !pip install gradio -q\n",
         "  %load_ext gradio"
       ],
@@ -258,7 +247,7 @@
         "      with gr.Tab(\"Chat\"):\n",
         "        # https://www.gradio.app/docs/chatbot\n",
         "\n",
-        "        chatbot = gr.Chatbot()\n",
+        "        chatbot = gr.Chatbot(bubble_full_width=False)\n",
         "        msg = gr.Textbox()\n",
         "        clear = gr.ClearButton([msg, chatbot])\n",
         "\n",
@@ -270,13 +259,14 @@
         "            return \"\", chat_history\n",
         "\n",
         "        def respond1(message, chat_history):\n",
-        "            chat_history.append((message))\n",
+        "            chat_history.append((message, None))\n",
         "            return \"\", chat_history\n",
         "\n",
         "        def respond2(chat_history):\n",
         "            bot_message = random.choice([\"How are you?\", \"I love you\", \"I'm very hungry\"])\n",
-        "            chat_history.append((bot_message))\n",
-        "            #time.sleep(2)\n",
+        "            chat_history.append((None, bot_message))\n",
+        "            chat_history = [['hello', bot_message]] # hack\n",
+        "            time.sleep(2)\n",
         "            return chat_history\n",
         "\n",
         "        #msg.submit(respond, [msg, chatbot], [msg, chatbot])\n",
@@ -317,13 +307,13 @@
       ],
       "metadata": {
         "id": "RW6M3o8PJGYq",
-        "outputId": "7c0af78e-baa8-4901-bfa6-e9aa2b7f76f0",
+        "outputId": "ff5fb04a-a4f6-445d-c476-7a35b0fe16ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 563
         }
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
