--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOalRUEBMQ67gfmxfHqg8XQ",
+      "authorship_tag": "ABX9TyMHqBXlXwCunXliuz2pOjvQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "NE6D9WvpGL1t"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "HcePPP4M5HPE"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EA-3_QJj6tWN",
-        "outputId": "3df8701d-22a6-4c0f-a124-510eb5061f3a"
+        "outputId": "ac7a98fa-a667-4142-bb63-15858d2c3d37"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,10 +163,10 @@
             "\n",
             "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
             "\u001b[32;1m\u001b[1;3m\n",
-            "Invoking: `Search` with `current weather in Cologne in Celsius`\n",
+            "Invoking: `Search` with `current weather in Cologne`\n",
             "\n",
             "\n",
-            "\u001b[0m\u001b[36;1m\u001b[1;3m{'type': 'weather_result', 'temperature': '13', 'unit': 'Celsius', 'precipitation': '2%', 'humidity': '77%', 'wind': '11 km/h', 'location': 'Cologne, Germany', 'date': 'Tuesday 10:00 PM', 'weather': 'Clear'}\u001b[0m\u001b[32;1m\u001b[1;3mThe current weather in Cologne, Germany is clear with a temperature of 13 degrees Celsius. The humidity is at 77% and there is a 2% chance of precipitation. The wind speed is 11 km/h.\u001b[0m\n",
+            "\u001b[0m\u001b[36;1m\u001b[1;3m{'type': 'weather_result', 'temperature': '65', 'unit': 'Fahrenheit', 'precipitation': '1%', 'humidity': '57%', 'wind': '11 mph', 'location': 'Cologne, Germany', 'date': 'Wednesday 1:00 PM', 'weather': 'Mostly cloudy'}\u001b[0m\u001b[32;1m\u001b[1;3mThe current weather in Cologne, Germany is mostly cloudy. The temperature is approximately 18.3 degrees Celsius. The humidity is at 57% and there is a wind speed of 11 mph. The chance of precipitation is 1%.\u001b[0m\n",
             "\n",
             "\u001b[1m> Finished chain.\u001b[0m\n"
           ]
@@ -183,15 +183,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Zsnvgf6BRaV",
-        "outputId": "6fb717af-20b9-44d7-b860-533fc06188c3"
+        "outputId": "0be8542a-b044-4fb7-a795-9b426762793a"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The current weather in Cologne, Germany is clear with a temperature of 13 degrees Celsius. The humidity is at 77% and there is a 2% chance of precipitation. The wind speed is 11 km/h.\n"
+            "The current weather in Cologne, Germany is mostly cloudy. The temperature is approximately 18.3 degrees Celsius. The humidity is at 57% and there is a wind speed of 11 mph. The chance of precipitation is 1%.\n"
           ]
         }
       ]
@@ -357,6 +357,150 @@
           "text": [
             "Keyboard interruption in main thread... closing server.\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tool Tests"
+      ],
+      "metadata": {
+        "id": "ZQ02m2ARb8cO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.llms import OpenAI\n",
+        "from langchain.agents import initialize_agent, AgentType\n",
+        "from langchain.tools import BaseTool, StructuredTool, Tool"
+      ],
+      "metadata": {
+        "id": "AeaEhnYJb-LV"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.environ[\"LANGCHAIN_TRACING\"] = \"true\"\n",
+        "#llm = OpenAI(temperature=0)\n",
+        "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')"
+      ],
+      "metadata": {
+        "id": "Zs1dGiVGcmtD"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tool 1\n",
+        "def multiplier(a: float, b: float) -> float:\n",
+        "    \"\"\"Multiply the provided floats.\"\"\"\n",
+        "    return a * b\n",
+        "\n",
+        "tool = StructuredTool.from_function(multiplier)\n",
+        "\n",
+        "agent_executor = initialize_agent(\n",
+        "    [tool],\n",
+        "    llm,\n",
+        "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    verbose=True,\n",
+        ")\n",
+        "agent_executor.run(\"What is 3 times 4\")"
+      ],
+      "metadata": {
+        "id": "LtfgVAjZc14k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tool 2\n",
+        "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
+        "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
+        "    premium = insured_sum*0.25\n",
+        "    return premium\n",
+        "\n",
+        "tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=True)\n",
+        "\n",
+        "agent_executor = initialize_agent(\n",
+        "    [tool],\n",
+        "    llm,\n",
+        "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    verbose=True,\n",
+        ")\n",
+        "agent_executor.run(\"Give me the premium for an insured sum of 10000000\")"
+      ],
+      "metadata": {
+        "id": "dF2g6iTCdM0P",
+        "outputId": "dbc3a9b3-0bf6-4751-fa31-53d5ec9e9900",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 327
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to load default session, using empty session: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /sessions?name=default (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7bca605c7eb0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:langchain.callbacks.tracers.langchain_v1:Failed to persist run: HTTPConnectionPool(host='localhost', port=8000): Max retries exceeded with url: /chain-runs (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7bca605c5420>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32;1m\u001b[1;3mThe user has asked for the premium for an insured sum but has not provided the industry. I need to ask for the industry to be able to calculate the premium. \n",
+            "\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"Final Answer\",\n",
+            "  \"action_input\": \"Could you please specify the industry for which you want to calculate the insurance premium?\"\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Could you please specify the industry for which you want to calculate the insurance premium?'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 55
         }
       ]
     }
